# audiovis

./: Cargo.toml  LICENSE  README.md  bar_texture.png~  config.toml  default_config.toml  image.png~
media/: README.md  bar_texture.kra  bar_texture.kra-autosave.kra
src/: .config.rs.kate-swp  audio.rs  bridge.rs  buffer_to_vertices.rs  config.rs  graphics.rs  main.rs  mesh.rs  shader.wgsl  wgpu_abstraction.rs
src/graphics/: camera.rs  mesh.rs  mod.rs  shader.wgsl  texture.rs  wgpu_abstraction.rs
