[package]
name = "audiovis"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = "0.10.0"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
#audioviz = "0.1.1"
audioviz = { path = "../audioviz" }
serde = "1.0.127"
toml = "0.5.8"
clap = "2.33.3"
cgmath = "0.18"
cpal = "0.13.4"
serde_derive = "1.0.130"
gag = "1.0.0"
colored = "2.0.0"
